# juliacall_example

./: .gitignore  README.md  notebook.ipynb  pyproject.toml
jl2py/: Project.toml  notebook.ipynb  pyproject.toml
julia_scripts/: pendulum.jl
py2jl/: knn_julia.ipynb  notebook.jl  notebook.jl.html
py2jl/julia_scripts/: notebook.jl.html
