[tool.poetry]
name = "sandy"
version = "0.1.0"
description = ""
authors = ["Ian Weaver <iweaver@mailbox.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
juliacall = "^0.4.3"
notebook = "^6.4.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
